<resources>
    <string name="author_name">Dennil_Wei</string>
    <string name="app_name">飞聊</string>
    <string name="login_str">登&#160;&#160;录</string>
    <string name="sign_up_str">注&#160;&#160;册</string>
    <string name="login_now_str">立&#160;&#160;即&#160;&#160;登&#160;&#160;录</string>
    <string name="quick_sign_str">快&#160;&#160;速&#160;&#160;注&#160;&#160;册</string>
    <string name="phone_str">手机号</string>
    <string name="quick_sign_up_str">快速注册</string>
    <string name="forgot_pwd_str">忘记密码?</string>
    <string name="verification_code_str">获取验证码</string>
    <string name="title_activity_bottom_bar">BottomBarActivity</string>
    <string name="title_home">飞聊</string>
    <string name="title_dashboard">联系人</string>
    <string name="new_friends">新的朋友</string>
    <string name="invite_friends">邀请好友</string>
    <string name="my_groups">我的群组</string>
    <string name="add_to_my_groups">申请入群</string>
    <string name="title_notifications">我</string>
    <string name="search">搜索</string>
    <string name="username">用户名</string>
    <string name="nick_str">昵称</string>
    <string name="username_phone_str">手机号</string>
    <string name="remember_pwd">记住密码</string>
    <string name="delete_local_str">从本地删除</string>
    <string name="delete_online_str">从线上删除</string>
    <string name="msg_push_str">消息通知</string>
    <string name="open_str">已开启</string>
    <string name="search_chat_str">查找聊天记录</string>
    <string name="chat_file_str">聊天文件</string>
    <string name="add_to_contact_str">添加到通讯录</string>
    <string name="delete_str">删除好友</string>
    <string name="send_msg_str">发消息</string>
    <string name="user_personal_signed">这个人很佛，什么都没有留下......</string>
    <string name="loose_change_str">零钱</string>
    <string name="fly_chat_store_str">飞聊商城</string>
    <string name="my_favorite_str">我的收藏</string>
    <string name="setting_str">设置</string>
    <string name="online_customer_service_str">在线客服</string>
    <string name="change_icon_str">修改头像</string>
    <string name="mine_qr_code_str">我的二维码</string>
    <string name="fly_code_str">飞聊号</string>
    <string name="fly_sign_str">个性签名</string>
    <string name="not_set_str">未设置</string>
    <string name="user_num_str">手机</string>
    <string name="share_card_str">分享我的名片</string>
    <string name="password_text">密码</string>
    <string name="other_info_text">其他</string>
    <string name="other_login_str">切换账号</string>
    <string name="click_outside_out_str">点击其他地方退出</string>
    <string name="xml_space">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="choose_from_lib">从图库中选择</string>
    <string name="take_photo">拍照</string>
    <string name="sure_str">确定</string>
    <string name="cancel_str">取消</string>
    <string name="chat_edit_hint_str">请输入…</string>
    <string name="send_btn_text_str">发&#160;&#160;&#160;&#160;送</string>
    <string name="set_font_size_str">字体大小</string>
    <string name="record_voice_str">按住说话</string>
    <string name="invite_by_message_str">短信邀请</string>
    <string name="invite_by_wechat_str">邀请微信好友</string>
    <string name="invite_by_wezone_str">分享朋友圈</string>
    <string name="invite_by_qq_str">邀请QQ好友</string>
    <string name="invite_by_qzone_str">分享至QQ空间</string>
    <string name="accept_str">同意</string>
    <string name="accepted_str">已同意</string>
    <string name="refused_str">拒绝</string>
    <string name="arrow_up_str">收起</string>
    <string name="arrow_down_str">下拉</string>
    <string name="three_point_str">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#8230;&#160;&#8230;</string>
    <string name="input_group_name_str">输入群名称</string>
    <string name="group_num_str">0个群成员</string>
    <string name="next_str">下一步</string>
    <string name="done_str">完成</string>
    <string name="group_name">群名称</string>
    <string name="group_qr_code_str">群二维码</string>
    <string name="group_notice_str">群公告</string>
    <string name="group_manage_str">群管理</string>
    <string name="set_keepers_str">设置群管理员</string>
    <string name="never_set_keeper_str">您未设置任何管理员</string>
    <string name="mine_group_nick_str">我在本群的昵称</string>
    <string name="set_mine_group_nick_str">设置本群昵称</string>
    <string name="money_gift_long_time_no_see_str">长时间未领取红包</string>
    <string name="group_chat_record_str">查找聊天记录</string>
    <string name="group_chat_file_str">聊天文件</string>
    <string name="invite_group_member_str">邀请群成员</string>
    <string name="group_member_str">群组成员</string>
    <string name="group_owner_str">群主</string>
    <string name="change_owner_str">转让群主权限</string>
    <string name="choose_owner_str">选择新群主</string>
    <string name="group_keeper_str">管理员</string>
    <string name="exit_group_str">退出群组</string>
    <string name="delete_member_str">移出群组</string>
    <string name="banned_member_str">禁言</string>
    <string name="cancel_banned_str">取消禁言</string>
    <string name="set_keeper_str">设为管理员</string>
    <string name="add_keepers_str">添加管理员</string>
    <string name="remove_keeper_str">取消管理员</string>
    <string name="group_basic_info_str">群资料</string>
    <string name="talk_ground_text">发起群聊</string>
    <string name="add_friends_text">添加朋友</string>
    <string name="SQ_text">扫一扫</string>
    <string name="help_back_up_text">帮助与反馈</string>
    <string name="red_package_str">红包</string>
    <string name="red_detail_str">红包详情</string>
    <string name="who_can_get">谁可以领</string>
    <string name="yuan_count_str">总金额</string>
    <string name="single_pack_yuan_str">单个金额</string>
    <string name="edit_yuan_str">填写金额</string>
    <string name="red_package_num_str">红包个数</string>
    <string name="edit_package_num_str">填写个数</string>
    <string name="yuan_str">元</string>
    <string name="num_str">个</string>
    <string name="send_red_package_str">塞钱进红包</string>
    <string name="red_package_back_ps_str">未领取的红包，将于24小时后发起退款</string>
    <string name="anybody_str">任何人</string>
    <string name="red_package_message_str">恭喜发财，大吉大利！</string>
    <string name="group_member_count_str">本群共2人</string>
    <string name="now_red_package_kind_str">当前为拼手气红包，</string>
    <string name="change_to_package_str">改为普通红包</string>
    <string name="money_count_str">￥0.00</string>
    <string name="charge_str">零钱</string>
    <string name="my_charge_str">我的零钱</string>
    <string name="recharge_str">充值</string>
    <string name="cash_withdrawal_str">提现</string>
    <string name="charge_withdraw_str">零钱提现</string>
    <string name="all_draw_str">全部提现</string>
    <string name="withdraw_notice_str">当前零钱余额￥1.56&#160;&#160;,&#160;&#160;</string>
    <string name="yuan_simple_str">￥</string>
    <string name="withdraw_amount_str">提现金额&#160;(&#160;手续费0.8%&#160;)&#160;</string>
    <string name="withdraw_bank_str">到账银行卡</string>
    <string name="choose_withdraw_bank_str">选择到账银行卡</string>
    <string name="new_withdraw_bank_str">使用新卡提现</string>
    <string name="withdraw_ps_str">2个工作日内到账</string>
    <string name="my_bank_card_str">我的银行卡</string>
    <string name="my_red_packet_record_str">我的红包记录</string>
    <string name="bind_alipay_str">绑定支付宝</string>
    <string name="recharge_change_str">零钱充值</string>
    <string name="recharge_yuan_str">充值金额</string>
    <string name="recharge_next_notice_str">充值到账会略有延迟 , 请稍后查询</string>
    <string name="bind_bank_card_str">绑定银行卡</string>
    <string name="no_bank_card_notice_str">没用可用的银行卡 , 现在就去添加？</string>
    <string name="add_bank_str">添加银行卡</string>
    <string name="bank_info_str">银行卡信息</string>
    <string name="done_bank_info_str">请完善银行卡信息</string>
    <string name="only_bank_verify_str">仅用于银行验证</string>
    <string name="order_confirm_str">确认订单</string>
    <string name="please_add_yours_card_str">请绑定持卡人本人的银行卡</string>
    <string name="card_below_str">持卡人</string>
    <string name="input_name_str">请输入您的姓名</string>
    <string name="id_card_str">身份证</string>
    <string name="input_id_number_str">请输入您的身份证号</string>
    <string name="card_number_str">卡号</string>
    <string name="only_savings_card_str">仅支持储蓄卡</string>
    <string name="bank_belong_str">所属银行</string>
    <string name="add_bank_card_notice_str">友情提示 ：仅支持绑定借记卡( 储蓄卡 ) ，不支持信用卡</string>
    <string name="verify_identity_str">身份验证</string>
    <string name="add_bank_input_pwd_str">添加银行卡\n请输入支付密码 ，以验证身份</string>
    <string name="pay_str">支付</string>
    <string name="pay_pwd_str">支付密码</string>
    <string name="pay_order_str">支付订单</string>
    <string name="pay_confirm_str">确认支付</string>
    <string name="pay_bank_str">支付银行卡</string>
    <string name="pay_yuan_str">支付金额</string>
    <string name="input_pay_pwd_str">输入支付密码</string>
    <string name="red_test_str">祝福语</string>
    <string name="bank_str">银行卡</string>
    <string name="bank_phone_str">银行预留手机号</string>
    <string name="union_pay_yun_str">云闪付</string>
    <string name="suggestion_str">【推荐】</string>
    <string name="pay_result_str">支付成功</string>
    <string name="pay_success_notice_str">支付成功，即将跳转</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="last_massage">最后一条信息或通知</string>
    <string name="msg_data">8月14号</string>
    <string name="msg_time">16:59</string>
    <string name="msg_date_time">8月14号&#160;&#160;16:59</string>
    <string name="other_text">敬请期待</string>
    <string name="user_num_eg">16500736578</string>
    <string name="password_eg">flyxia.cn</string>
    <string name="test1_str">Test</string>
    <string name="test2_str">This is message from you friend, please check.
    这是&#160;&#160;&#160;&#160;一条&#160;&#160;&#160;&#160;测试&#160;&#160;&#160;&#160;数据。
        &amp;……&amp;……*%&amp;（（*））GJGGKHjhHKHKkHhkk</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string-array name="tick_text_str_arr">
        <item>小</item>
        <item> </item>
        <item>中</item>
        <item> </item>
        <item>大</item>
    </string-array>
    <string name="login_out_str">退出登录</string>
    <string-array name="query_suggestions">
        <item>搜索建议1</item>
        <item>搜索建议2</item>
        <item>搜索建议3</item>
    </string-array>
    <string name="title_activity_user_basic_info">UserBasicInfoActivity</string>
    <string name="apk">apk接入</string>
    <string name="back">&lt;</string>
    <string name="cp_loading">初始化,请稍后</string>
    <string name="entryTitle">接入方式选择</string>
    <string name="hello_world">Hello world!</string>
    <string name="jar">银联sdk接入</string>
    <string name="menu_settings">Settings</string>
    <string name="mp_desk">收银台</string>
    <string name="payBYAPK">APK接入</string>
    <string name="payBYJAR">JAR接入</string>
    <string name="add_str">添加</string>
    <string name="title_activity_group_basic_info">GroupBasicInfoActivity</string>
    <string name="order_number_str">订单号</string>
    <string name="pay_money_str">支付金额</string>
    <string name="input_verification_code_str">请输入验证码</string>
    <string name="hello_space_str">Hello Space!</string>
    <string name="fly_space_str">飞聊空间</string>
    <string name="unbind_str">解除绑定</string>
    <string name="title_activity_fly">FlyActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
</resources>