<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".activity.AddBankCardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_74"
        android:background="@color/colorPrimary"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/dp_35"
            android:layout_height="@dimen/dp_49"
            android:layout_marginStart="@dimen/dp_3"
            android:layout_marginLeft="@dimen/dp_3"
            android:background="@drawable/light_gray_rip_out"
            android:paddingStart="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_10"
            android:src="@drawable/left_arrow"
            tools:ignore="ContentDescription,RtlSymmetry"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_49"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginLeft="@dimen/dp_12"
            android:gravity="center"
            android:text="@string/add_bank_str"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_20"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMineBack"
        android:paddingStart="@dimen/dp_20"
        android:paddingLeft="@dimen/dp_10"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_5"
        android:text="@string/please_add_yours_card_str"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/sp_13"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/colorLightGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/card_below_str"
            android:textColor="@color/colorMineThemeText"
            android:textSize="?smallFont"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_marginLeft="@dimen/dp_25"
            android:background="@null"
            android:hint="@string/input_name_str"
            android:inputType="text"
            android:textColor="@color/colorMineThemeText"
            android:textColorHint="@color/colorLightGray"
            android:textCursorDrawable="@drawable/light_gray_cursor"
            android:textSize="?smallFont"
            tools:ignore="Autofill"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/colorLightGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/id_card_str"
            android:textColor="@color/colorMineThemeText"
            android:textSize="?smallFont"/>

        <EditText
            android:id="@+id/id_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_marginLeft="@dimen/dp_25"
            android:background="@null"
            android:digits="0123456789xX"
            android:hint="@string/input_id_number_str"
            android:inputType="text"
            android:textColor="@color/colorMineThemeText"
            android:textColorHint="@color/colorLightGray"
            android:textCursorDrawable="@drawable/light_gray_cursor"
            android:textSize="?smallFont"
            tools:ignore="Autofill,TextFields"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/colorLightGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/card_number_str"
            android:textColor="@color/colorMineThemeText"
            android:textSize="?smallFont"/>

        <EditText
            android:id="@+id/card_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_41"
            android:layout_marginLeft="@dimen/dp_41"
            android:background="@null"
            android:digits="0123456789xX"
            android:hint="@string/only_savings_card_str"
            android:inputType="text"
            android:textColor="@color/colorMineThemeText"
            android:textColorHint="@color/colorLightGray"
            android:textCursorDrawable="@drawable/light_gray_cursor"
            android:textSize="?smallFont"
            tools:ignore="Autofill,TextFields"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/colorLightGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/bank_belong_str"
            android:textColor="@color/colorMineThemeText"
            android:textSize="?smallFont"/>

        <Spinner
            android:id="@+id/belong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:entries="@array/bank_name">

        </Spinner>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/colorLightGray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_9"
        android:layout_marginLeft="@dimen/dp_9"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"
        android:text="@string/add_bank_card_notice_str"
        android:textColor="@color/colorGray"/>

    <Button
        android:id="@+id/next_step"
        android:layout_width="@dimen/dp_330"
        android:layout_height="@dimen/dp_38"
        android:layout_gravity="center_horizontal"
        android:alpha="0.5"
        android:background="@drawable/coffee_bg"
        android:enabled="false"
        android:text="@string/done_str"
        android:textColor="@color/colorWhite"/>

</LinearLayout>